# handpose3d

./: .gitignore  README.md  requirements.txt  run.sh  show_3d_hands.py
docker/: Dockerfile  bashrc_setup.sh  docker-compose.yaml  entrypoint.sh
docs/: estimation_guide_v1.md
legacy/: handpose3d.py  requirements.txt
ros2_ws/: pyproject.toml
ros2_ws/src/handpose_estimation/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/handpose_estimation/config/: extrinsics.yaml  hand_template.yaml  handpose3d.rviz  handpose_estimation.yaml  stereo_depth.rviz  stereo_depth.yaml
ros2_ws/src/handpose_estimation/handpose_estimation/: handpose_node.py  stereo_depth_node.py  triangulation.py  wrist_pose_pipeline.py
ros2_ws/src/handpose_estimation/launch/: handpose_estimation.launch.py  stereo_depth.launch.py
ros2_ws/src/handpose_estimation/test/: test_wrist_pose_pipeline.py
ros2_ws/src/handpose_estimation_v2/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/handpose_estimation_v2/config/: handpose_estimation_v2.yaml
ros2_ws/src/handpose_estimation_v2/handpose_estimation_v2/: handpose_node.py  model_fit.py  model_pose_pipeline.py
ros2_ws/src/handpose_estimation_v2/launch/: handpose_estimation_v2.launch.py
ros2_ws/src/handpose_estimation_v2/test/: conftest.py  test_model_fit.py
ros2_ws/src/vision_interfaces/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/vision_interfaces/config/: vision_interfaces.yaml
ros2_ws/src/vision_interfaces/config/camera_info/: camera0.yaml  camera1.yaml
ros2_ws/src/vision_interfaces/launch/: vision_interfaces.launch.py
ros2_ws/src/vision_interfaces/vision_interfaces/: camera_publisher_node.py
scripts/: download_model.sh
