<?xml version="1.0"?>
<package format="3">
  <name>handpose_estimation</name>
  <version>0.1.0</version>
  <description>
    3D hand pose estimation. Subscribes to two calibrated camera streams,
    runs MediaPipe HandLandmarker, triangulates 21 keypoints to 3D and
    publishes a skeleton MarkerArray for RViz.
  </description>
  <maintainer email="jinyang@cell-labs.ai">jinyang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
